--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
       content="https://ваш-домен.ru/images/twitter-preview.jpg"
     />
 
+    <!-- Font Awesome (ОДИН РАЗ) -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <!-- Favicon - правильные пути для ваших файлов -->
+
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
     <link rel="shortcut icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
-
-    <!-- Для Android (web app manifest) -->
     <link
       rel="icon"
       type="image/png"
@@ -70,6 +70,8 @@
       sizes="512x512"
       href="/web-app-manifest-512x512.png"
     />
+
+    <!-- Запасная иконка-эмодзи (на случай отсутствия файлов) -->
     <link
       rel="icon"
       href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🌐</text></svg>"
@@ -485,7 +487,7 @@
                     <span class="checkbox-icon"></span>
                     <span class="checkbox-text">
                       Согласен с
-                      <a href="#" class="privacy-link"
+                      <a href="privacy-policy.html" class="privacy-link"
                         >политикой конфиденциальности</a
                       >
                     </span>
@@ -534,8 +536,9 @@
               Почему с нами <span>выгодно</span> работать
             </h2>
             <p class="section-subtitle">
-              Не просто разработка, а партнерство, которое приносит реальные
-              результаты вашему бизнесу
+              Мы создаем сайты, которые приносят реальные результаты вашему
+              бизнесу. Современные технологии, чистый код и забота о каждом
+              клиенте
             </p>
           </div>
 
@@ -544,48 +547,48 @@
             <div class="benefit-card">
               <div class="benefit-icon-wrapper">
                 <div class="benefit-icon">
-                  <i class="fas fa-hand-holding-heart"></i>
+                  <i class="fas fa-pencil-ruler"></i>
                 </div>
                 <div class="benefit-stat">VIP</div>
               </div>
               <h3 class="benefit-title">Индивидуальный подход</h3>
               <p class="benefit-description">
-                Каждый проект для нас уникален. Мы не используем шаблоны —
-                создаем решение специально под ваши задачи, бюджет и целевую
-                аудиторию
+                Каждый проект для нас уникален. Мы не используем готовые шаблоны
+                — создаем дизайн и функционал специально под ваши задачи, бюджет
+                и целевую аудиторию
               </p>
               <div class="benefit-tags">
-                <span class="benefit-tag">Личный менеджер</span>
+                <span class="benefit-tag">Уникальный дизайн</span>
                 <span class="benefit-tag">Без шаблонов</span>
-                <span class="benefit-tag">Под ваш бюджет</span>
+                <span class="benefit-tag">Под ваш бизнес</span>
               </div>
             </div>
 
-            <!-- Карточка 2 - Прозрачность и честность -->
+            <!-- Карточка 2 - Чистый код и современные технологии -->
             <div class="benefit-card">
               <div class="benefit-icon-wrapper">
                 <div
                   class="benefit-icon"
                   style="background: linear-gradient(135deg, #3b82f6, #8b5cf6)"
                 >
-                  <i class="fas fa-eye"></i>
+                  <i class="fas fa-code"></i>
                 </div>
-                <div class="benefit-stat">100%</div>
+                <div class="benefit-stat">HTML5</div>
               </div>
-              <h3 class="benefit-title">Полная прозрачность</h3>
+              <h3 class="benefit-title">Современные технологии</h3>
               <p class="benefit-description">
-                Вы всегда знаете, на каком этапе проект, куда идут деньги и
-                когда будет результат. Открытые отчеты и доступ к системам
-                управления проектами
+                Пишем чистый, структурированный код с использованием последних
+                стандартов. Адаптивная верстка, семантическая разметка и
+                оптимизация скорости загрузки
               </p>
               <div class="benefit-features">
                 <div class="benefit-feature">
                   <i class="fas fa-check-circle"></i>
-                  <span>Еженедельные отчеты</span>
+                  <span>HTML5 / CSS3 / JavaScript</span>
                 </div>
                 <div class="benefit-feature">
                   <i class="fas fa-check-circle"></i>
-                  <span>Доступ к Trello/Asana</span>
+                  <span>Адаптивность под все устройства</span>
                 </div>
               </div>
             </div>
@@ -599,26 +602,27 @@
                 >
                   <i class="fas fa-rocket"></i>
                 </div>
-                <div class="benefit-stat">7 дней</div>
+                <div class="benefit-stat">14 дней</div>
               </div>
               <h3 class="benefit-title">Быстрый старт</h3>
               <p class="benefit-description">
-                От концепции до первого результата. Мы умеем работать быстро без
-                потери качества. Первую версию сайта вы увидите уже через 7 дней
+                От концепции до готового результата. Умеем работать быстро без
+                потери качества. Первую версию сайта вы увидите уже через 14
+                дней
               </p>
               <div class="benefit-features">
                 <div class="benefit-feature">
                   <i class="fas fa-check-circle"></i>
-                  <span>Прототип за 3 дня</span>
+                  <span>Прототип за 7 дней</span>
                 </div>
                 <div class="benefit-feature">
                   <i class="fas fa-check-circle"></i>
-                  <span>Демо через неделю</span>
+                  <span>Демо через 2 недели</span>
                 </div>
               </div>
             </div>
 
-            <!-- Карточка 4 - Результат, а не просто код -->
+            <!-- Карточка 4 - Ориентация на результат -->
             <div class="benefit-card">
               <div class="benefit-icon-wrapper">
                 <div
@@ -631,87 +635,105 @@
               </div>
               <h3 class="benefit-title">Ориентация на результат</h3>
               <p class="benefit-description">
-                Нам важно не просто сдать проект, а чтобы он приносил вам
-                клиентов. Анализируем эффективность и предлагаем улучшения после
-                запуска
+                Нам важно не просто сдать сайт, а чтобы он приносил вам
+                клиентов. Анализируем эффективность и даем рекомендации по
+                улучшению после запуска
               </p>
               <div class="benefit-features">
                 <div class="benefit-feature">
                   <i class="fas fa-check-circle"></i>
-                  <span>Аналитика конверсий</span>
+                  <span>Настройка аналитики</span>
                 </div>
                 <div class="benefit-feature">
                   <i class="fas fa-check-circle"></i>
-                  <span>Рекомендации по улучшению</span>
+                  <span>SEO-оптимизация</span>
                 </div>
               </div>
             </div>
 
-            <!-- Карточка с подарком -->
+            <!-- Карточка 5 - Прозрачность и честность -->
             <div class="benefit-card">
               <div class="benefit-icon-wrapper">
                 <div
                   class="benefit-icon"
                   style="background: linear-gradient(135deg, #ff6b6b, #f03e3e)"
                 >
-                  <i class="fas fa-gift"></i>
+                  <i class="fas fa-handshake"></i>
                 </div>
-                <div class="tech-badge gift">Бонус</div>
+                <div class="tech-badge gift">Без риска</div>
               </div>
-              <h3 class="benefit-title">Обучение и поддержка</h3>
+              <h3 class="benefit-title">Прозрачность и доверие</h3>
               <p class="benefit-description">
-                Научим вас управлять сайтом: как добавлять товары, менять
-                контент, смотреть статистику. Вы не будете зависеть от
-                разработчиков
+                Вы всегда знаете, на каком этапе проект. Фиксированная смета,
+                понятные этапы работы и никаких скрытых платежей
               </p>
               <div class="tech-demo">
                 <span class="tech-status status-active">
-                  <i class="fas fa-circle"></i> Видеоуроки
+                  <i class="fas fa-circle"></i> Фиксированная цена
                 </span>
                 <a href="#" class="tech-link">
-                  Пример обучения <i class="fas fa-arrow-right"></i>
+                  Смета за 1 час <i class="fas fa-arrow-right"></i>
                 </a>
               </div>
             </div>
-            <!-- Карточка 6 - Адаптивность и современность -->
+
+            <!-- Карточка 6 - Техническая поддержка -->
             <div class="benefit-card">
               <div class="benefit-icon-wrapper">
                 <div
                   class="benefit-icon"
                   style="background: linear-gradient(135deg, #6c5ce7, #4a40b0)"
                 >
-                  <i class="fas fa-mobile-alt"></i>
+                  <i class="fas fa-headset"></i>
                 </div>
-                <div class="benefit-stat">Тренд</div>
+                <div class="benefit-stat">24/7</div>
               </div>
-              <h3 class="benefit-title">Современные стандарты</h3>
+              <h3 class="benefit-title">Поддержка и обучение</h3>
               <p class="benefit-description">
-                Сайты, которые идеально выглядят на всех устройствах, быстро
-                грузятся и соответствуют последним трендам веб-дизайна
+                После запуска не бросаем клиентов. Научим управлять сайтом,
+                поможем с наполнением и всегда на связи по любым вопросам
               </p>
               <div class="benefit-tags">
-                <span class="benefit-tag">Mobile First</span>
-                <span class="benefit-tag">Адаптивность</span>
-                <span class="benefit-tag">Быстрая загрузка</span>
+                <span class="benefit-tag">Обучение</span>
+                <span class="benefit-tag">Техподдержка</span>
+                <span class="benefit-tag">Консультации</span>
               </div>
               <div class="benefit-features" style="margin-top: 15px">
                 <div class="benefit-feature">
                   <i class="fas fa-check-circle"></i>
-                  <a href="#" class="benefit-link">Примеры работ →</a>
+                  <span>Месяц бесплатной поддержки</span>
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- Блок с результатами - конкретные цифры -->
+          <!-- Блок с преимуществами - конкретные цифры -->
           <div class="benefits-results">
             <div class="result-item">
               <div class="result-icon">
                 <i class="fas fa-clock"></i>
               </div>
               <div class="result-content">
-                <div class="result-value">7 дней</div>
-                <div class="result-label">до первого результата</div>
+                <div class="result-value">от 7 дней</div>
+                <div class="result-label">на разработку</div>
+              </div>
+            </div>
+            <div class="result-item">
+              <div class="result-icon">
+                <i class="fas fa-code"></i>
+              </div>
+              <div class="result-content">
+                <div class="result-value">100%</div>
+                <div class="result-label">чистый код</div>
+              </div>
+            </div>
+            <div class="result-item">
+              <div class="result-icon">
+                <i class="fas fa-mobile-alt"></i>
+              </div>
+              <div class="result-content">
+                <div class="result-value">Адаптивность</div>
+                <div class="result-label">все устройства</div>
               </div>
             </div>
             <div class="result-item">
@@ -720,16 +742,7 @@
               </div>
               <div class="result-content">
                 <div class="result-value">24/7</div>
-                <div class="result-label">поддержка</div>
-              </div>
-            </div>
-            <div class="result-item">
-              <div class="result-icon">
-                <i class="fas fa-check-circle"></i>
-              </div>
-              <div class="result-content">
-                <div class="result-value">100%</div>
-                <div class="result-label">прозрачность</div>
+                <div class="result-label">на связи</div>
               </div>
             </div>
           </div>
@@ -1029,11 +1042,11 @@
         <!-- Нижняя часть футера -->
         <div class="footer__bottom">
           <div class="footer__policy">
-            <a class="footer__policy-link" href="/privacy-policy"
+            <a class="footer__policy-link" href="personal-data-policy.html"
               >Политика обработки персональных данных</a
             >
             <span class="footer__separator">|</span>
-            <a class="footer__policy-link" href="/privacy-policy"
+            <a class="footer__policy-link" href="privacy-policy.html"
               >Политика конфиденциальности</a
             >
           </div>
@@ -1069,7 +1082,7 @@
             Мы используем файлы cookie, чтобы улучшить работу сайта и
             предоставить вам лучший опыт. Продолжая использовать сайт, вы
             соглашаетесь с
-            <a href="/privacy-policy">политикой конфиденциальности</a>.
+            <a href="privacy-policy.html">политикой конфиденциальности</a>.
           </p>
         </div>
         <div class="cookie-banner__actions">
