--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
               <div class="benefit-icon-wrapper">
                 <div
                   class="benefit-icon"
-                  style="background: linear-gradient(135deg, #3b82f6, #8b5cf6)"
+                  style="background: linear-gradient(135deg, #c70d00, #8b5cf6)"
                 >
                   <i class="fas fa-code"></i>
                 </div>
@@ -682,7 +682,9 @@
               <div class="benefit-icon-wrapper">
                 <div
                   class="benefit-icon"
-                  style="background: linear-gradient(135deg, #6c5ce7, #4a40b0)"
+                  style="
+                    background: linear-gradient(135deg, #150b8b, #1affa4bb);
+                  "
                 >
                   <i class="fas fa-headset"></i>
                 </div>
