--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     <link rel="stylesheet" href="css/services.css" />
     <link rel="stylesheet" href="css/promo.css" />
     <link rel="stylesheet" href="css/benefits.css" />
+    <link rel="stylesheet" href="css/modal.css" />
 
     <title>TerraCode | Разработка сайтов под ключ в Липецке</title>
   </head>
