--- a/index.html
+++ b/index.html
@@ -683,9 +683,7 @@
               <div class="benefit-icon-wrapper">
                 <div
                   class="benefit-icon"
-                  style="
-                    background: linear-gradient(135deg, #150b8b, #1affa4bb);
-                  "
+                  style="background: linear-gradient(135deg, #380084, #ff1313)"
                 >
                   <i class="fas fa-headset"></i>
                 </div>
