--- a/index.html
+++ b/index.html
@@ -509,11 +509,14 @@
                   <div class="contact-alternative">
                     <span>Или напишите напрямую:</span>
                     <a
-                      href="https://t.me/+79997005798"
+                      href="https://web.max.ru/+79997005798"
                       class="telegram-link"
                       target="_blank"
+                      rel="noopener noreferrer"
                     >
-                      @Max (8-999-700-57-98)
+                      <i class="fas fa-globe"></i>
+                      <i class="fas fa-mobile-alt"></i>
+                      <i class="fas fa-headset"></i> @Max
                     </a>
                   </div>
                 </div>
