--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
                   <div class="contact-alternative">
                     <span>Или напишите напрямую:</span>
                     <a
-                      href="https://web.max.ru/+79997005798"
+                      href="https://max.ru/u/f9LHodD0cOKmQFOmibtbXUaS0BnrZ-tonOSsFGG1VcraCgKs4wfhSd9kGl0"
                       class="telegram-link"
                       target="_blank"
                       rel="noopener noreferrer"
